--- a/temp-bedroom.yaml
+++ b/temp-bedroom.yaml
@@ -10,6 +10,8 @@ logger:
 # Enable Home Assistant API
 api:
   password: !secret api_password
+  encryption:
+    key: !secret api_encryption_key
 
 ota:
   password: !secret api_password
