--- a/bedroom.yaml
+++ b/bedroom.yaml
@@ -1,8 +1,8 @@
 esphome:
-  name: temp-bedroom
+  name: bedroom-sensor
 
 esp8266:
-  board: nodemcuv2
+  board: d1_mini
 
 # Enable logging
 logger:
@@ -22,7 +22,7 @@ wifi:
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Temp-Bedroom Fallback Hotspot"
+    ssid: "Bedroom Sensor Fallback Hotspot"
     password: !secret wifi_fallback_password
 
 captive_portal:
